--- a/docker-images/apache-php-image/content/index.html
+++ b/docker-images/apache-php-image/content/index.html
@@ -357,6 +357,9 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/agency.min.js"></script>
+	
+	 <!-- Custom script to load animals-->
+    <script src="js/students.js"></script>
 
   </body>
 
